--- a/.github/workflows/main_ccooks.yml
+++ b/.github/workflows/main_ccooks.yml
@@ -22,7 +22,9 @@ jobs:
           java-version: '17'
 
       - name: Build with Maven
-        run: mvn clean install
+        run: |
+            ./mvnw clean package -DskipTests -Denv=cloud
+            # mvn clean install
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v3
