--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
     <description>CleanCooks</description>
     <properties>
         <java.version>17</java.version>
+        <start-class>com.example.CleanCooks.CleanCooksApplication</start-class>
     </properties>
     <dependencies>
         <dependency>
