--- a/pom.xml
+++ b/pom.xml
@@ -56,6 +56,7 @@
                             <artifactId>lombok</artifactId>
                         </exclude>
                     </excludes>
+                        <mainClass>com.example.cleancooks.CleanCooksApplication</mainClass>
                 </configuration>
             </plugin>
         </plugins>
