--- a/src/be/pom.xml
+++ b/src/be/pom.xml
@@ -5,23 +5,23 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>3.2.1</version>
+        <version>3.2.2</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <groupId>com.example</groupId>
-    <artifactId>CleanCooks</artifactId>
+    <artifactId>Ccooks</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>CleanCooks</name>
-    <description>CleanCooks</description>
+    <name>Ccooks</name>
+    <description>Ccooks</description>
     <properties>
         <java.version>17</java.version>
-        <start-class>com.example.cleancooks.CleanCooksApplication</start-class>
     </properties>
     <dependencies>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-jpa</artifactId>
         </dependency>
+
         <dependency>
             <groupId>org.postgresql</groupId>
             <artifactId>postgresql</artifactId>
@@ -38,10 +38,14 @@
             <scope>test</scope>
         </dependency>
         <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-web</artifactId>
+            <version>6.1.3</version>
+        </dependency>
+        <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
-
     </dependencies>
 
     <build>
@@ -56,7 +60,6 @@
                             <artifactId>lombok</artifactId>
                         </exclude>
                     </excludes>
-                        <mainClass>com.example.cleancooks.CleanCooksApplication</mainClass>
                 </configuration>
             </plugin>
         </plugins>
