--- a/.github/workflows/main_ccooks.yml
+++ b/.github/workflows/main_ccooks.yml
@@ -22,13 +22,17 @@ jobs:
           java-version: '17'
 
       - name: Build with Maven
-        run: mvn clean install
+        run: |
+          cd src/be
+          chmod +x mvnw
+          ./mvnw clean package -DskipTests -Denv=cloud
+           # mvn clean install
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v3
         with:
           name: java-app
-          path: '${{ github.workspace }}/target/*.jar'
+          path: '${{ github.workspace }}/src/be/target/*.jar'
 
   deploy:
     runs-on: ubuntu-latest
