--- a/.github/workflows/main_ccooks.yml
+++ b/.github/workflows/main_ccooks.yml
@@ -51,7 +51,7 @@ jobs:
         id: deploy-to-webapp
         uses: azure/webapps-deploy@v2
         with:
-          app-name: 'Ccooks'
+          app-name: 'cleancooks'
           slot-name: 'Production'
           publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_2DB1C6D9D9974913A427517A2539A9AF }}
           package: '*.jar'
